Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -160,7 +160,6 @@ footer {
 		border-bottom: 40px solid black;
 		}
 	header {
-		position: relative;
 		float: none;
 		margin: 0px;
 		padding: 0px;
@@ -175,7 +174,6 @@ footer {
 		background-attachment: scroll;
 		}
 	section {
-		position: relative;
 		margin: 0px;
 		float: none;
 	  	padding: 0 0 20px 0;
@@ -190,7 +188,6 @@ footer {
 		background-attachment: scroll;
 		}
 	.content {
-		position: relative;
 		width: auto;
 		height: auto;
 		top: auto;
@@ -201,7 +198,6 @@ footer {
 		border: none;
 		}
 	.menu {
-		position: relative;
 		width: auto;
 		height: auto;
 		top: auto;
